--- a/_sass/dark.scss
+++ b/_sass/dark.scss
@@ -1,7 +1,7 @@
 body {
 	background: linear-gradient(-45deg,#000000,#25252565,#3a3a3a,#0e0606,#25252565,#000000dc,#201e1e,#25252583);
 	background-size:  400% 400%;
-	animation: gradient 35s ease infinite;
+	//animation: gradient 35s ease infinite;
 	color: #e6e6e6;
 	text-shadow: 6px 4px 9px rgba(5,3,3,0.76);
 }
